--- a/interesting.html
+++ b/interesting.html
@@ -9,16 +9,15 @@ background-color: black;
 </style>
 <head>
 <meta name= "viewport" content= "width=device-width, initial-scale=1.0">
-<title>look at this lol</title>
+<title>olha isso lol</title>
 </head>
-<body align = "left">
+<body align = "center" style="display:flex;">
 <center>
-<title>sus</title>
 <h2>
-<a href = "https://m.youtube.com/watch?v=xvFZjo5PgG0" style = "color: black"> look how cool this game is
-<img src = "https://i.pinimg.com/originals/0d/3d/fc/0d3dfcc1267cf1616ef4cc19064e01a3.gif" style = "width:400px;height:400px;">
+<a href = "https://m.youtube.com/watch?v=xvFZjo5PgG0" style = "color: black">Veja como esse jogo é legal
+<img src = "https://i.pinimg.com/originals/0d/3d/fc/0d3dfcc1267cf1616ef4cc19064e01a3.gif" style = "width:400px;height:400px;border: 2px solid black;border-radius:50px;">
 </h2>
-<h1 style = "color: green"> click up here to see it
+<h1 style = "color: green">clique aqui para ver
 </h1>
 </center>
 </body>
