--- a/interesting.html
+++ b/interesting.html
@@ -8,6 +8,7 @@ background-color: black;
 }
 </style>
 <head>
+<meta charset= "UTF-8">
 <meta name= "viewport" content= "width=device-width, initial-scale=1.0">
 <title>olha isso lol</title>
 </head>
