--- a/interesting.html
+++ b/interesting.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
-<html>
-<style>
-body {background: rgb(21,132,33);
-background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(21,132,33,1) 100%);
-background-repeat: no-repeat;
-background-color: black;
-}
-</style>
-<head>
-<meta charset= "UTF-8">
-<meta name= "viewport" content= "width=device-width, initial-scale=1.0">
-<title>olha isso lol</title>
-</head>
-<body align = "center" style="display:flex;">
-<center>
-<h2>
-<a href = "https://m.youtube.com/watch?v=xvFZjo5PgG0" style = "color: black">Veja como esse jogo é legal
-<img src = "https://i.pinimg.com/originals/0d/3d/fc/0d3dfcc1267cf1616ef4cc19064e01a3.gif" style = "width:400px;height:400px;border: 2px solid black;border-radius:50px;">
-</h2>
-<h1 style = "color: green">clique aqui para ver
-</h1>
-</center>
-</body>
+<html lang="pt-br">
+ <head>
+  <meta charset="UTF-8">
+  <meta name= "viewport" content= "width=device-width, initial-scale=1.0">
+  <title>olha isso lol</title>
+ </head>
+ <body align = "center">
+  <center>
+  <h2>
+  <a href = "https://m.youtube.com/watch?v=xvFZjo5PgG0">veja como esse jogo é legal
+  <img src = "https://i.pinimg.com/originals/0d/3d/fc/0d3dfcc1267cf1616ef4cc19064e01a3.gif">
+  </h2>
+  <h1>clique aqui para ver</h1></a>
+  </center>
+ </body>
+ <style>
+body {background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(21,132,33,1) 100%);
+      background-repeat: no-repeat;
+      background-color: black;}
+a {color: black; text-decoration: none;}
+img {width: 100%; height: 100%;
+     border: 2px solid black; border-radius: 50px;}
+h1 {color: green;}
+ </style>
 </html>
