--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
   </center>
  </body>
  <style>
-body {background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(21,132,33,1) 100%);
+body {background: black;
       background-repeat: no-repeat;
       background-color: black;}
-a {color: black; text-decoration: none;}
-img {width: 100%; height: 100%;
-     border: 2px solid black; border-radius: 50px;}
-h1 {color: green;}
+a {color: white; text-decoration: none; text-shadow: 0px 0px 15px lime;}
+img {width: 80%; height: 80%;
+     box-shadow: 0px 0px 15px lime;
+     border-radius: 50px;}
+h1 {color: white; text-shadow: 0px 0px 15px lime;}
  </style>
 </html>
