--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
             <div class="game-preview">
                 <div class="placeholder-image">
                     <div class="game-icon">🎮</div>
+                        <img src="https://media1.tenor.com/m/BRdvedzXjy8AAAAd/doom-the-dark-ages-doom-dark-ages.gif">
                     <div class="game-text">PREVIEW DO JOGO</div>
                 </div>
             </div>
