--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
             box-sizing: border-box;
         }
 
+        html {
+            background: #1a1a1a;
+        }
+
         body {
             background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 50%, #0a0a0a 100%);
             min-height: 100vh;
